forked from startUp for myself

--- a/manifest.json
+++ b/manifest.json
@@ -2,35 +2,33 @@
 	"manifest_version": 2,
 	"minimum_chrome_version": "22",
 	"name": "__MSG_ext_name__",
-	"short_name":"smartUp",
-	"version": "7.1.382.1148",
+	"short_name": "Gesturefy",
+	"version": "1.0.0",
 	"description": "__MSG_ext_des__",
 	"default_locale": "en",
-	"author":"zimo",
+	"author": "wx",
 	"icons": {
 		"16": "icon.png",
 		"48": "icon.png",
 		"128": "icon.png"
 	},
 	"background": {
-		"scripts": ["js/purify.js","js/gbk.js","js/background.js"],
+		"scripts": ["js/purify.js", "js/gbk.js", "js/background.js"],
 		"persistent": true
 	},
-	"content_scripts": [
-		{
-			"js": ["js/event.js"],
-			"matches": ["<all_urls>"],
-			"run_at": "document_start",
-			"all_frames":true,
-			"match_about_blank":true
-		}
-	],
+	"content_scripts": [{
+		"js": ["js/event.js"],
+		"matches": ["<all_urls>"],
+		"run_at": "document_start",
+		"all_frames": true,
+		"match_about_blank": true
+	}],
 	"browser_action": {
 		"default_icon": {
 			"19": "icon.png",
 			"38": "icon.png"
 		},
-		"default_title": "smartUp",
+		"default_title": "Gesturefy",
 		"default_popup": "html/popup.html"
 	},
 	"options_ui": {
@@ -41,6 +39,6 @@
 		"image/*",
 		"icon.png"
 	],
-	"permissions": ["tabs","<all_urls>","notifications","storage","contextMenus","unlimitedStorage","tts"],
-	"optional_permissions": ["downloads","downloads.shelf","clipboardRead","clipboardWrite","bookmarks","history","management","sessions","pageCapture","background","topSites"]
+	"permissions": ["tabs", "<all_urls>", "notifications", "storage", "contextMenus", "unlimitedStorage", "tts"],
+	"optional_permissions": ["downloads", "downloads.shelf", "clipboardRead", "clipboardWrite", "bookmarks", "history", "management", "sessions", "pageCapture", "background", "topSites"]
 }
