修改：manifest.json 去掉 "js/purify.js", "js/gbk.js"

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
 		"128": "icon.png"
 	},
 	"background": {
-		"scripts": ["js/purify.js", "js/gbk.js", "js/background.js"],
+		"scripts": ["js/background.js"],
 		"persistent": true
 	},
 	"content_scripts": [{
